--- a/unidev/index.html
+++ b/unidev/index.html
@@ -14,7 +14,7 @@
         }
         .back
         {
-            background-image: url("mobile.png") ;
+            background-image: url("desktop.png") ;
             background-attachment: scroll;
             background-size: cover;
             background-repeat: no-repeat; 
