--- a/unidev/index.html
+++ b/unidev/index.html
@@ -23,8 +23,9 @@
         }
         .logo
         {
-        height: 0.1%;
-        width: 35%;
+            margin-top:1%;
+            height: 0.1%;
+            width: 35%;
         }
         .augment
         {
